# rusting_bitmaps

./: Cargo.toml  LICENSE  README.md  rusting-bitmaps.code-workspace
.cargo/: config.toml
benches/: queries.rs
res/: test_data.json
src/: lib.rs  roaring.rs  roaring_array.rs  simd.rs  statistics.rs  test.rs  utils.rs
src/container/: algorithm.rs  array.rs  array_ops.rs  array_simd.rs  bitset.rs  bitset_ops.rs  bitset_simd.rs  mod.rs  run.rs
src/container/array_ops/: avx.rs  mod.rs  scalar.rs  simd.rs  sse.rs  vector.rs
src/container/array_ops/simd/: avx2_old.rs  mod.rs  mod_old.rs  sse42.rs
src/container/bitset_ops/: mod.rs  scalar.rs  vector.rs
src/container/bitset_ops/simd/: avx2.rs  mod.rs  sse42.rs
src/container/run_ops/: mod.rs
src/test/: extended.rs  mod.rs  short.rs
