[package]
name = "rusting_bitmaps"
version = "0.1.0"
authors = ["Techgeek1 <austin.rife@gmail.com>"]
edition = "2018"

[dev-dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = { version =  "1.0.39" }

# Use simd acceleration for the library
[features]
default = []

# Use avx2 extensions for all ops
avx = []

# Use sse extensions for all ops
sse = []