[package]
name = "rusting_bitmaps"
version = "0.1.0"
authors = ["Techgeek1 <austin.rife@gmail.com>"]
edition = "2018"

[dependencies]
core = { git = "https://github.com/techgeek1/core" }

# Use simd acceleration for the library
[features]
default = []

# Use avx2 extensions for all ops
avx = []

# Use sse extensions for all ops
sse = []