[package]
name = "rusting_bitmaps"
version = "0.1.0"
authors = ["Techgeek1 <austin.rife@gmail.com>"]
edition = "2018"

[dependencies]
tinybit = { git = "https://github.com/techgeek1/tinybit" }

[dev-dependencies]
criterion = "0.2.11"
num-traits = "0.2.8"
rand = { version = "0.7.0", features = ["small_rng"] }

[[bench]]
name = "queries"
harness = false